--- a/src/templates/default/module/user/login/forgot.tpl.html
+++ b/src/templates/default/module/user/login/forgot.tpl.html
@@ -1,10 +1,34 @@
-{% import 'main/macros.tpl.html' as macro %}
-<div class="container">
-  <form class="form-signin" method="post">
-	{{ macro.csrf_input() }}
-    <h3 class="form-signin-heading">{{ title_forgot }}</h3>
-    <input type="text" name="user_name" class="input-block-level" placeholder="{{ label_username }}" value="{{ value_user_name }}" required>
-    <button class="btn btn-primary" type="submit">{{ label_submit }}</button>
-    <a class="btn" href="?">{{ label_go_back }}</a>
-  </form>
-</div>
+{% extends 'main/login.tpl.html' %}
+
+{% set title = page_title %}
+
+
+{% block content %}
+
+    {% import 'main/macros.tpl.html' as macro %}
+
+    <form class="form-signin" method="post">
+
+        {{ macro.csrf_input() }}
+        <input type="hidden" name="action" value="login">
+
+        <div class="form-group has-feedback">
+            <input type="text" name="user_name" class="form-control" placeholder="{{ label_username }}" value="{{ value_user_name }}" required>
+            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <button type="submit" class="btn btn-primary btn-block btn-flat">{{ label_submit }}</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12 text-right">
+                <a href="/">{{ label_go_back }}</a>
+            </div>
+        </div>
+
+    </form>
+
+{% endblock %}
