--- a/src/templates/default/module/user/login/login.tpl.html
+++ b/src/templates/default/module/user/login/login.tpl.html
@@ -23,15 +23,18 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-8">
+            <div class="col-xs-12">
+                <button type="submit" class="btn btn-primary btn-block btn-flat">{{ label_login }}</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12">
                 <div class="checkbox icheck">
                     <label>
                         <input type="checkbox" name="user_rememberme" value="1" {{ value_rememberme }}> {{ label_remember_me }}
                     </label>
                 </div>
-            </div>
-            <div class="col-xs-4">
-                <button type="submit" class="btn btn-primary btn-block btn-flat">{{ label_login }}</button>
             </div>
         </div>
 
